--- a/login.html
+++ b/login.html
@@ -13,33 +13,20 @@
         <h1 class="h1">Ithuteng Tutoring Program</h1>
     </header>
 
-    <div class="lg1" >
-
-        <div class="row"  >
-            <div class="c-ol-md-4" >
-
-                <div class="lg2" >
-                    <br><br>
-                    <div class="form-group" >
-                        <label for="uname">Username:</label>
-                        <input type="text" id="uname" name="uname">
-                        <br><br>
-                        <label for="password">Password:</label>
-                        <input type="text" id="password" name="password">
-                        <br><br>
-                        <div>
-                            <a href="home.html">
-                                <button class="form-group"> 
-                                    Login
-                                </button>
-                            </a>
-                        </div>  
-                    </div>
+    
+    <div class="form1">
+        <form class="login-form" action="javascript:void(0);">
+            <h1>Login</h1>
+            <div class="form-input-material">
+                <input type="text" name="username" id="username" placeholder=" " autocomplete="on" class="form-control-material" required />
+                <label for="username">Username</label>
             </div>
+            <div class="form-input-material">
+                <input type="password" name="password" id="password" placeholder=" " autocomplete="off" class="form-control-material" required />
+                <label for="password">Password</label>
             </div>
-        
-        </div>
-
+            <button type="submit" class="btn btn-primary btn-ghost">Login</button>
+        </form>
     </div>
     </body>
 </html>
