--- a/login.html
+++ b/login.html
@@ -13,20 +13,6 @@
         <h1 class="h1">Ithuteng Tutoring Program</h1>
     </header>
 
-    
-    <div class="form1">
-        <form class="login-form" action="javascript:void(0);">
-            <h1>Login</h1>
-            <div class="form-input-material">
-                <input type="text" name="username" id="username" placeholder=" " autocomplete="on" class="form-control-material" required />
-                <label for="username">Username</label>
-            </div>
-            <div class="form-input-material">
-                <input type="password" name="password" id="password" placeholder=" " autocomplete="off" class="form-control-material" required />
-                <label for="password">Password</label>
-            </div>
-            <button type="submit" class="btn btn-primary btn-ghost">Login</button>
-        </form>
-    </div>
+    <iframe src="https://eskooly.com/bb/signin.php" frameborder="0" width="100%" height="720vh"></iframe>
     </body>
 </html>
