--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header class="header1">
             <div class="log">
-                <img class="logo" src="/images/logo.png" alt="ITP logo">
+                <img class="logo" src="images\logo.png" alt="ITP logo">
             <figcaption>Ithuteng Tutoring Program PTY(LTD)</figcaption>
             </div>
             
