--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <header class="header2">
-        <a href="index.html"><img class="log2" src="../images/logo.png" alt="logo"></a>
+        <a href="index.html"><img class="log2" src="images\logo.png" alt="logo"></a>
         <h1 class="h1">Ithuteng Tutoring Program</h1>
     </header>
 
